--- a/module_solution/index.html
+++ b/module_solution/index.html
@@ -1,2 +1,4 @@
 # myfirstproject
 Just a project for assignment
+  
+https://kharshavardhangoud.github.io/myfirstproject/   use this link to preview project
